--- a/index.html
+++ b/index.html
@@ -410,50 +410,47 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Feel free to reach out for collaborations, inquiries, or if you simply want to connect. I'm open to exploring new opportunities in mobile application development and further expanding my network within the tech community.</p>
-      </div><!-- End Section Title -->
+     <!-- Section Title -->
+<div class="container section-title" data-aos="fade-up">
+  <h2>Contact</h2>
+  <p>Feel free to reach out for collaborations, inquiries, or if you simply want to connect. I'm open to exploring new opportunities in mobile application development and further expanding my network within the tech community.</p>
+</div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+<div class="container" data-aos="fade-up" data-aos-delay="100">
+  <div class="row gy-4">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-5">
-
-            <div class="info-wrap">
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
-                <i class="bi bi-geo-alt flex-shrink-0"></i>
-                <div>
-                  <h3>Address</h3>
-                  <p>Toronto, Onatrio M5C 0A6</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
-                <i class="bi bi-telephone flex-shrink-0"></i>
-                <div>
-                  <h3>Call</h3>
-                  <p>+1 437 423 8356</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
-                <i class="bi bi-envelope flex-shrink-0"></i>
-                <div>
-                  <h3>Email</h3>
-                  <p>tejindersingh@georgebrown.ca</p>
-                </div>
-              </div><!-- End Info Item -->
-
-              <iframe src="https://www.google.com/maps?q=Nathan+Phillips+Square,+Toronto&output=embed" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+    <div class="col-lg-12"> <!-- Full width column to cover more space -->
+      <div class="info-wrap">
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+          <i class="bi bi-geo-alt flex-shrink-0"></i>
+          <div>
+            <h3>Address</h3>
+            <p>Toronto, Ontario M5C 0A6</p>
           </div>
-        </div>
+        </div><!-- End Info Item -->
 
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+          <i class="bi bi-telephone flex-shrink-0"></i>
+          <div>
+            <h3>Call</h3>
+            <p>+1 437 423 8356</p>
+          </div>
+        </div><!-- End Info Item -->
+
+        <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+          <i class="bi bi-envelope flex-shrink-0"></i>
+          <div>
+            <h3>Email</h3>
+            <p>tejindersingh@georgebrown.ca</p>
+          </div>
+        </div><!-- End Info Item -->
+
+        <iframe src="https://www.google.com/maps?q=Nathan+Phillips+Square,+Toronto&output=embed" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-    </section><!-- /Contact Section -->
+    </div>
+  </div>
+</div>
+<!-- /Contact Section -->
 
   </main>
 
