--- a/index.html
+++ b/index.html
@@ -401,6 +401,14 @@
             <i class="fab fa-youtube"></i> Watch on YouTube
           </a>
         </div>
+         <!-- GitHub Section -->
+    <div class="github-section mt-5 text-center">
+      <h3>Visit My GitHub Profile</h3> <!-- Heading for the GitHub button -->
+      <p>Feel free to explore my repositories and projects on GitHub.</p>
+      <a href="https://github.com/TejinderS1130" class="btn btn-secondary mt-3" target="_blank">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+    </div>
       </div>
     
     </section>
